--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 vgg19/cifar_100/raw/*
 vgg19/cifar_100/train/*
 vgg19/cifar_100/test/*
-vgg19/model/*
+vgg19/backup/*
 src/lfw/raw/*
 src/lfw/train/*
 src/lfw/test/*
-src/model/*
+src/backup/*
 src/result/*
 class.txt
 __pycache__
